<resources>
    <string name="app_name">FinalCountDown</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Settings</string>

    <!-- Time Preferences -->
    <string name="pref_time_header">Time Settings</string>
    <string name="pref_selected_time_title">Selected Time</string>
    <string name="pref_selected_time_summary">Choose your target time</string>
    <string name="pref_add_time_title">Add New Time</string>
    <string name="pref_add_time_summary">Add a new named time</string>
    <string name="pref_remove_time_title">Remove Time</string>
    <string name="pref_remove_time_summary">Remove a named time</string>
    <string name="add_time_dialog_title">Add New Time</string>
    <string name="edit_time_dialog_title">Edit Time</string>
    <string name="time_name_hint">Time name (e.g., Club Tuesday, no-spinaker)</string>
    <string name="time_value_hint">Time (HHMMSS)</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="remove_time_dialog_title">Remove Time</string>
    <string name="remove_time_dialog_message">Select a time to remove:</string>
    <string name="remove_time_success">Time removed successfully</string>
    <string name="remove_time_error">Cannot remove the last time</string>

    <!-- Flag Preferences -->
    <string name="pref_flags_header">Flag Settings</string>
    <string name="pref_class_flag_title">Class Flag</string>
    <string name="pref_class_flag_summary">Flag shown at 5 minutes</string>
    <string name="pref_prep_flag_title">Preparatory Flag</string>
    <string name="pref_prep_flag_summary">Flag shown at 4 minutes</string>
</resources>