<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_time_header">

        <ListPreference
            app:key="pref_selected_time"
            app:title="@string/pref_selected_time_title"
            app:summary="@string/pref_selected_time_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="pref_add_time"
            app:title="@string/pref_add_time_title"
            app:summary="@string/pref_add_time_summary" />

        <Preference
            app:key="pref_remove_time"
            app:title="@string/pref_remove_time_title"
            app:summary="@string/pref_remove_time_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_flags_header">

        <ListPreference
            app:key="pref_class_flag"
            app:title="@string/pref_class_flag_title"
            app:summary="@string/pref_class_flag_summary"
            app:entries="@array/class_flag_entries"
            app:entryValues="@array/class_flag_entry_values"
            app:defaultValue="flag_pennant_one"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="pref_prep_flag"
            app:title="@string/pref_prep_flag_title"
            app:summary="@string/pref_prep_flag_summary"
            app:entries="@array/prep_flag_entries"
            app:entryValues="@array/prep_flag_entry_values"
            app:defaultValue="flag_papa"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>